--- a/test.html
+++ b/test.html
@@ -1,14 +1,10 @@
+<!DOCTYPE HTML>
+<html lang="en"></html>
 <html>
 	<head>
+		<meta charset="utf-8"/>
 		<title></title>
-	</head>
-	<body>
 		
-	</body>
-</html>
-<html>
-	<head>
-		<title></title>
 	</head>
 	<body>
 		
