--- a/demo.html
+++ b/demo.html
@@ -30,7 +30,9 @@
     </div>
     <img src="" alt="" srcset="">
     <div>
-        <div></div>
+        <div>
+            <i></i>
+        </div>
     </div>
 
 </body>
